--- a/qa327/templates/index.html
+++ b/qa327/templates/index.html
@@ -86,10 +86,30 @@ th {
     <input class="form-control" type="date" name="sell-date" id="sell-date" required>
 
     <input class="btn btn-primary" type="submit" value="Submit Selling Ticket">
-    <input class="btn btn-primary" type="submit" value="Update Selling Ticket">
   </div>
 </form>
 
+  <!-- This page contaisn a form that user can submit the ticket info for update -->
+  <!-- contain ticket name; quantity; price; expiration date -->
+  <h4 id='message_s'>{{message_s}}</h4>
+  <h3> Ticket-Updating Form </h3>
+  <form action = "/update" method="post">
+    <div class="form-group">
+      <label for="name">Name</label>
+      <input class="form-control" name="update-name" id="update-name" required>
+      
+      <label for="quantity">Quantity</label>
+      <input class="form-control" name="update-quantity" id="update-quantity" required>
+      
+      <label for="price">Price</label>
+      <input class="form-control" type="price" name="update-price" id="update-price" required>
+      
+      <label for="date">Expiration Date</label>
+      <input class="form-control" type="date" name="update-date" id="update-date" required>
+      
+      <input class="btn btn-primary" type="submit" value="Update Selling Ticket">
+    </div>
+  </form>
 
 <!-- This page contaisn a form that user can submit the ticket info for buy-->
 <!-- contain ticket name; ticket quantity-->
