--- a/qa327/templates/index.html
+++ b/qa327/templates/index.html
@@ -80,7 +80,7 @@ th {
     <input class="form-control" name="sell-quantity" id="sell-quantity" required>
 
     <label for="price">Price</label>
-    <input class="form-control" type="price" name="sell-price" id="sell-price" required>
+    <input class="form-control" name="sell-price" id="sell-price" required>
 
     <label for="date">Expiration Date</label>
     <input class="form-control" type="date" name="sell-date" id="sell-date" required>
@@ -91,7 +91,7 @@ th {
 
   <!-- This page contaisn a form that user can submit the ticket info for update -->
   <!-- contain ticket name; quantity; price; expiration date -->
-  <h4 id='message_s'>{{message_s}}</h4>
+  <h4 id='message_u'>{{message_u}}</h4>
   <h3> Ticket-Updating Form </h3>
   <form action = "/update" method="post">
     <div class="form-group">
@@ -102,7 +102,7 @@ th {
       <input class="form-control" name="update-quantity" id="update-quantity" required>
       
       <label for="price">Price</label>
-      <input class="form-control" type="price" name="update-price" id="update-price" required>
+      <input class="form-control" name="update-price" id="update-price" required>
       
       <label for="date">Expiration Date</label>
       <input class="form-control" type="date" name="update-date" id="update-date" required>
